--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_metrics_metadata.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_metrics_metadata.yaml
@@ -1,91 +1,91 @@
 table:
-  name: execution_metrics_metadata
   schema: public
+  name: execution_metrics_metadata
 object_relationships:
-- name: execution
-  using:
-    foreign_key_constraint_on: execution_id
+  - name: execution
+    using:
+      foreign_key_constraint_on: execution_id
 insert_permissions:
-- permission:
-    check:
-      execution:
-        id:
-          _eq: X-Hasura-Testrunner-Id
-    columns:
-    - chart_configuration
-    set:
-      execution_id: x-hasura-Testrunner-Id
-  role: testrunner
+  - role: testrunner
+    permission:
+      check:
+        execution:
+          id:
+            _eq: X-Hasura-Testrunner-Id
+      set:
+        execution_id: x-hasura-Testrunner-Id
+      columns:
+        - chart_configuration
 select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - chart_configuration
-    - execution_id
-    - id
-    filter:
-      _and:
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: manager
-- permission:
-    allow_aggregations: true
-    columns:
-    - chart_configuration
-    - execution_id
-    - id
-    filter:
-      _and:
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: reader
-- permission:
-    allow_aggregations: true
-    columns:
-    - chart_configuration
-    - execution_id
-    - id
-    filter:
-      _and:
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tenantadmin
-- permission:
-    allow_aggregations: true
-    columns:
-    - chart_configuration
-    - execution_id
-    - id
-    filter:
-      _and:
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tester
+  - role: manager
+    permission:
+      columns:
+        - chart_configuration
+        - execution_id
+        - id
+      filter:
+        _and:
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: reader
+    permission:
+      columns:
+        - chart_configuration
+        - execution_id
+        - id
+      filter:
+        _and:
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tenantadmin
+    permission:
+      columns:
+        - chart_configuration
+        - execution_id
+        - id
+      filter:
+        _and:
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tester
+    permission:
+      columns:
+        - chart_configuration
+        - execution_id
+        - id
+      filter:
+        _and:
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
