--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_envvars.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_envvars.yaml
@@ -1,104 +1,104 @@
 table:
-  name: configuration_envvars
   schema: public
+  name: configuration_envvars
 object_relationships:
-- name: configuration
-  using:
-    foreign_key_constraint_on: configuration_id
+  - name: configuration
+    using:
+      foreign_key_constraint_on: configuration_id
 select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - configuration_id
-    - name
-    - value
-    filter:
-      _and:
-      - configuration:
-          is_deleted:
-            _eq: false
-      - configuration:
-          project:
-            is_deleted:
-              _eq: false
-      - configuration:
-          project:
-            userProjects:
-              user_id:
-                _eq: X-Hasura-User-Id
-  role: manager
-- permission:
-    allow_aggregations: true
-    columns:
-    - configuration_id
-    - name
-    - value
-    filter:
-      _and:
-      - configuration:
-          is_deleted:
-            _eq: false
-      - configuration:
-          project:
-            is_deleted:
-              _eq: false
-      - configuration:
-          project:
-            userProjects:
-              user_id:
-                _eq: X-Hasura-User-Id
-  role: reader
-- permission:
-    allow_aggregations: true
-    columns:
-    - configuration_id
-    - name
-    - value
-    filter:
-      _and:
-      - configuration:
-          is_deleted:
-            _eq: false
-      - configuration:
-          project:
-            is_deleted:
-              _eq: false
-      - configuration:
-          project:
-            userProjects:
-              user_id:
-                _eq: X-Hasura-User-Id
-  role: tenantadmin
-- permission:
-    allow_aggregations: true
-    columns:
-    - configuration_id
-    - name
-    - value
-    filter:
-      _and:
-      - configuration:
-          is_deleted:
-            _eq: false
-      - configuration:
-          project:
-            is_deleted:
-              _eq: false
-      - configuration:
-          project:
-            userProjects:
-              user_id:
-                _eq: X-Hasura-User-Id
-  role: tester
-- permission:
-    allow_aggregations: true
-    columns:
-    - configuration_id
-    - name
-    - value
-    filter:
-      configuration:
-        executions:
-          id:
-            _eq: X-Hasura-Testruner-Id
-  role: testrunner
+  - role: manager
+    permission:
+      columns:
+        - configuration_id
+        - name
+        - value
+      filter:
+        _and:
+          - configuration:
+              is_deleted:
+                _eq: false
+          - configuration:
+              project:
+                is_deleted:
+                  _eq: false
+          - configuration:
+              project:
+                userProjects:
+                  user_id:
+                    _eq: X-Hasura-User-Id
+      allow_aggregations: true
+  - role: reader
+    permission:
+      columns:
+        - configuration_id
+        - name
+        - value
+      filter:
+        _and:
+          - configuration:
+              is_deleted:
+                _eq: false
+          - configuration:
+              project:
+                is_deleted:
+                  _eq: false
+          - configuration:
+              project:
+                userProjects:
+                  user_id:
+                    _eq: X-Hasura-User-Id
+      allow_aggregations: true
+  - role: tenantadmin
+    permission:
+      columns:
+        - configuration_id
+        - name
+        - value
+      filter:
+        _and:
+          - configuration:
+              is_deleted:
+                _eq: false
+          - configuration:
+              project:
+                is_deleted:
+                  _eq: false
+          - configuration:
+              project:
+                userProjects:
+                  user_id:
+                    _eq: X-Hasura-User-Id
+      allow_aggregations: true
+  - role: tester
+    permission:
+      columns:
+        - configuration_id
+        - name
+        - value
+      filter:
+        _and:
+          - configuration:
+              is_deleted:
+                _eq: false
+          - configuration:
+              project:
+                is_deleted:
+                  _eq: false
+          - configuration:
+              project:
+                userProjects:
+                  user_id:
+                    _eq: X-Hasura-User-Id
+      allow_aggregations: true
+  - role: testrunner
+    permission:
+      columns:
+        - configuration_id
+        - name
+        - value
+      filter:
+        configuration:
+          executions:
+            id:
+              _eq: X-Hasura-Testruner-Id
+      allow_aggregations: true
