--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_distribution.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_distribution.yaml
@@ -1,179 +1,179 @@
 table:
-  name: execution_distribution
   schema: public
+  name: execution_distribution
 object_relationships:
-- name: execution
-  using:
-    foreign_key_constraint_on: execution_id
+  - name: execution
+    using:
+      foreign_key_constraint_on: execution_id
 insert_permissions:
-- permission:
-    check: {}
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - p50
-    - p66
-    - p75
-    - p80
-    - p90
-    - p95
-    - p98
-    - p99
-    - p100
-    set:
-      execution_id: x-hasura-Testruner-Id
-  role: testrunner
+  - role: testrunner
+    permission:
+      check: {}
+      set:
+        execution_id: x-hasura-Testruner-Id
+      columns:
+        - id
+        - execution_id
+        - timestamp
+        - identifier
+        - method
+        - name
+        - num_requests
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - p100
 select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - p50
-    - p66
-    - p75
-    - p80
-    - p90
-    - p95
-    - p98
-    - p99
-    - p100
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: manager
-- permission:
-    allow_aggregations: true
-    columns:
-    - execution_id
-    - id
-    - identifier
-    - method
-    - name
-    - num_requests
-    - p100
-    - p50
-    - p66
-    - p75
-    - p80
-    - p90
-    - p95
-    - p98
-    - p99
-    - timestamp
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: reader
-- permission:
-    allow_aggregations: true
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - p50
-    - p66
-    - p75
-    - p80
-    - p90
-    - p95
-    - p98
-    - p99
-    - p100
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tenantadmin
-- permission:
-    allow_aggregations: true
-    columns:
-    - execution_id
-    - id
-    - identifier
-    - method
-    - name
-    - num_requests
-    - p100
-    - p50
-    - p66
-    - p75
-    - p80
-    - p90
-    - p95
-    - p98
-    - p99
-    - timestamp
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tester
+  - role: manager
+    permission:
+      columns:
+        - id
+        - execution_id
+        - timestamp
+        - identifier
+        - method
+        - name
+        - num_requests
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - p100
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: reader
+    permission:
+      columns:
+        - execution_id
+        - id
+        - identifier
+        - method
+        - name
+        - num_requests
+        - p100
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - timestamp
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tenantadmin
+    permission:
+      columns:
+        - id
+        - execution_id
+        - timestamp
+        - identifier
+        - method
+        - name
+        - num_requests
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - p100
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tester
+    permission:
+      columns:
+        - execution_id
+        - id
+        - identifier
+        - method
+        - name
+        - num_requests
+        - p100
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - timestamp
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
