--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_requests.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_requests.yaml
@@ -1,169 +1,179 @@
 table:
-  name: execution_requests
   schema: public
+  name: execution_requests
 object_relationships:
-- name: execution
-  using:
-    foreign_key_constraint_on: execution_id
+  - name: execution
+    using:
+      foreign_key_constraint_on: execution_id
 insert_permissions:
-- permission:
-    check: {}
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - num_failures
-    - median_response_time
-    - average_response_time
-    - min_response_time
-    - max_response_time
-    - average_content_size
-    - requests_per_second
-    set:
-      execution_id: x-hasura-Testruner-Id
-  role: testrunner
+  - role: testrunner
+    permission:
+      check: {}
+      set:
+        execution_id: x-hasura-Testruner-Id
+      columns:
+        - average_content_size
+        - average_response_time
+        - execution_id
+        - id
+        - identifier
+        - max_response_time
+        - median_response_time
+        - method
+        - min_response_time
+        - name
+        - num_failures
+        - num_requests
+        - requests_per_second
+        - successes_per_tick
+        - timestamp
+        - total_content_length
 select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - num_failures
-    - median_response_time
-    - average_response_time
-    - min_response_time
-    - max_response_time
-    - average_content_size
-    - requests_per_second
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: manager
-- permission:
-    allow_aggregations: true
-    columns:
-    - average_content_size
-    - average_response_time
-    - execution_id
-    - id
-    - identifier
-    - max_response_time
-    - median_response_time
-    - method
-    - min_response_time
-    - name
-    - num_failures
-    - num_requests
-    - requests_per_second
-    - timestamp
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: reader
-- permission:
-    allow_aggregations: true
-    columns:
-    - id
-    - execution_id
-    - timestamp
-    - identifier
-    - method
-    - name
-    - num_requests
-    - num_failures
-    - median_response_time
-    - average_response_time
-    - min_response_time
-    - max_response_time
-    - average_content_size
-    - requests_per_second
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tenantadmin
-- permission:
-    allow_aggregations: true
-    columns:
-    - average_content_size
-    - average_response_time
-    - execution_id
-    - id
-    - identifier
-    - max_response_time
-    - median_response_time
-    - method
-    - min_response_time
-    - name
-    - num_failures
-    - num_requests
-    - requests_per_second
-    - timestamp
-    filter:
-      _and:
-      - execution:
-          configuration:
-            project:
-              userProjects:
-                user_id:
-                  _eq: X-Hasura-User-Id
-      - execution:
-          configuration:
-            is_deleted:
-              _eq: false
-      - execution:
-          configuration:
-            project:
-              is_deleted:
-                _eq: false
-  role: tester
+  - role: manager
+    permission:
+      columns:
+        - average_content_size
+        - average_response_time
+        - execution_id
+        - id
+        - identifier
+        - max_response_time
+        - median_response_time
+        - method
+        - min_response_time
+        - name
+        - num_failures
+        - num_requests
+        - requests_per_second
+        - successes_per_tick
+        - timestamp
+        - total_content_length
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: reader
+    permission:
+      columns:
+        - average_content_size
+        - average_response_time
+        - execution_id
+        - id
+        - identifier
+        - max_response_time
+        - median_response_time
+        - method
+        - min_response_time
+        - name
+        - num_failures
+        - num_requests
+        - requests_per_second
+        - successes_per_tick
+        - timestamp
+        - total_content_length
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tenantadmin
+    permission:
+      columns:
+        - average_content_size
+        - average_response_time
+        - execution_id
+        - id
+        - identifier
+        - max_response_time
+        - median_response_time
+        - method
+        - min_response_time
+        - name
+        - num_failures
+        - num_requests
+        - requests_per_second
+        - successes_per_tick
+        - timestamp
+        - total_content_length
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
+  - role: tester
+    permission:
+      columns:
+        - average_content_size
+        - average_response_time
+        - execution_id
+        - id
+        - identifier
+        - max_response_time
+        - median_response_time
+        - method
+        - min_response_time
+        - name
+        - num_failures
+        - num_requests
+        - requests_per_second
+        - successes_per_tick
+        - timestamp
+        - total_content_length
+      filter:
+        _and:
+          - execution:
+              configuration:
+                project:
+                  userProjects:
+                    user_id:
+                      _eq: X-Hasura-User-Id
+          - execution:
+              configuration:
+                is_deleted:
+                  _eq: false
+          - execution:
+              configuration:
+                project:
+                  is_deleted:
+                    _eq: false
+      allow_aggregations: true
