--- a/bolt-api/apps/bolt_api/Dockerfile
+++ b/bolt-api/apps/bolt_api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10.0b3-slim as base
 RUN apt-get update &&\
-    apt-get install -y curl gcc libjpeg62-turbo-dev zlib1g-dev musl musl-dev libffi-dev openssh-client libjpeg62 &&\
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y curl gcc libjpeg62-turbo-dev zlib1g-dev musl musl-dev libffi-dev openssh-client libjpeg62  \
+    libmagic1
 
 RUN pip install --no-cache-dir --upgrade -U pip
 
@@ -34,6 +34,7 @@ ARG release
 ENV SENTRY_RELEASE $release
 ENV FLASK_APP=apps.bolt_api.wsgi:application
 
-RUN apt-get install -y git
+RUN apt-get install -y git &&\
+    rm -rf /var/lib/apt/lists/*
 
 CMD gunicorn apps.bolt_api.wsgi:application -w 6 --timeout 480 --bind 0.0.0.0:80 --worker-tmp-dir /dev/shm --preload
